k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: node-express-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
     metadata:
       labels:
        app: mongodb-deployment
     spec:
        containers:
          - name: mongodb-deployment
            image: mongo:latest
            imagePullPolicy: Always
            ports:
             - containerPort: 27017
