k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-deployment
  namespace: node-express-application
spec:
  selector:
    app: mongodb-deployment
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
